--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -3,7 +3,7 @@
     <div class="list  card">
 
       <a ng-repeat="category in cc.categories" href="#" class="item item-icon-left">
-      {{category.id}}.{{category.name}}
+      {{category.id+1}}.{{category.name}}
       </a>
 
     </div>
